# python-materialsdb

./: .gitignore  README.md  cache.py  classes.py  classes_generator.py  pyproject.toml  requirement.txt  serialiser.py  setup.cfg
.github/workflows/: pypi_publish.yml
dev_utils/: classes_generator.py  material_psets.py  update_material_psets_json.py
examples/: create_layers.py  generate_ifc_project_libraries.py
ifc/: project_library.py
materialsdb/: serialiser.py
materialsdb/ifc/: project_library.py
src/materialsdb/: cache.py  serialiser.py  utils.py
src/materialsdb/ifc/: material_psets.json  project_library.py
src/materialsdb/schema/: MaterialsDBIndex100.xsd  materialsdb102.dtd  materialsdb102.xsd  materialsdb103.xsd
tests/: test_project_library.py  test_serialiser.py
