[metadata]
name = materialsdb
version = 0.0.1
author = Cyril Waechter
author_email = cyrwae@hotmail.com
description = A library to work with materialsdb.org open standard for building materials.
long_description = file: README.md
long_description_content = text/markdown
license = GPLv3+
keywords = materials, BIM, ifcopenshell, IFC
url = https://github.com/CyrilWaechter/python-materialsdb
project_urls = 
    Bug Tracker = https://github.com/CyrilWaechter/python-materialsdb/issues
    Community = https://community.osarch.org/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires = 
    lxml

[options.package_data]
* = *.json, *.xsd

[options.packages.find]
where = src

[options.extras_require]
ifc = ifcopenshell